--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
 - npm test
 after_script:
-- if [ "$TRAVIS_BRANCH" == "master" ]; then ./travis-renameRef.sh;
+- if [ "$TRAVIS_BRANCH" == "testerename" ]; then ./travis-renameRef.sh;
   fi
 env:
   global:
